# Smart-wave-customization

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
smart_wave_customize/: hooks.py  modules.txt
smart_wave_customize/config/: desktop.py  docs.py
smart_wave_customize/fixtures/: print_format.json  system_settings.json  translation.json  workspace.json
smart_wave_customize/overrides/: sales_invoice.py
smart_wave_customize/smart_wave_customize/custom/: bank.json  company.json  packed_item.json  purchase_order.json  sales_invoice.json  sales_invoice_item.json  sales_order.json
smart_wave_customize/smart_wave_customize/doctype/legal_document/: legal_document.js  legal_document.json  legal_document.py  test_legal_document.py
smart_wave_customize/smart_wave_customize/print_format/smart_wave_po/: smart_wave_po.json
smart_wave_customize/smart_wave_customize/print_format/smart_wave_si/: smart_wave_si.json
